// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Organisms | CardWithTabs Controlled behaviour 1`] = `
Array [
  <button
    onClick={[Function]}
    type="button"
  >
    Change state outside
  </button>,
  <div
    className="Card__StyledCard-sc-1e5czjc-0 fCiISE CardWithTitle__StyledCard-sc-1ny6tjx-1 hmmprL CardWithTabs__CustomCardWithTitle-eom33o-1 fMiyle"
  >
    <header
      className="CardWithTitle__StyledHeader-sc-1ny6tjx-0 gnUsaT"
    >
      <h2
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
      >
        Title for the card
      </h2>
    </header>
    <ul
      className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD CardWithTabs__StyledTabs-eom33o-0 jGvfzD"
      direction="row"
      role="tablist"
    >
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        role="presentation"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
        >
          <button
            aria-selected={true}
            className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
            id="tabs-tab-0"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={0}
            type="button"
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
              height={8}
            >
              Tab title 1
            </span>
          </button>
        </span>
      </li>
      <li
        className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
        role="presentation"
      >
        <span
          className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
        >
          <button
            aria-selected={false}
            className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
            id="tabs-tab-1"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex={-1}
            type="button"
          >
            <span
              className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
              height={8}
            >
              Tab title 2
            </span>
          </button>
        </span>
      </li>
    </ul>
    <div
      className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
    />
    <section
      aria-labelledby="tabs-tab-0"
      className="Tabs__Content-bqti0u-2 hYgPOB"
      hidden={false}
      id="tabs-tabpanel-0"
      role="tabpanel"
    >
      Tab content 1
    </section>
  </div>,
]
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with FadedScroll 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE CardWithTitle__StyledCard-sc-1ny6tjx-1 hmmprL CardWithTabs__CustomCardWithTitle-eom33o-1 fMiyle"
>
  <header
    className="CardWithTitle__StyledHeader-sc-1ny6tjx-0 gnUsaT"
  >
    <h2
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD CardWithTabs__StyledTabs-eom33o-0 jGvfzD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="FadedScroll__Container-sc-134qq0d-0 dCAKgx"
    >
      <div
        className="FadedScroll__Scroller-sc-134qq0d-1 bPAhDW"
      >
        <div
          className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
        >
          <div
            className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
          />
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 ecSuzB"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
          </div>
          <div
            className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with FadedScroll of content and height being whatever is available left of parents height. 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE CardWithTitle__StyledCard-sc-1ny6tjx-1 hmmprL CardWithTabs__CustomCardWithTitle-eom33o-1 fMiyle CardWithTabsstories__HeightOnCardWithTabs-sc-11n6k03-0 dDxHCU"
>
  <header
    className="CardWithTitle__StyledHeader-sc-1ny6tjx-0 gnUsaT"
  >
    <h2
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD CardWithTabs__StyledTabs-eom33o-0 jGvfzD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="FadedScroll__Container-sc-134qq0d-0 bMeIvy"
    >
      <div
        className="FadedScroll__Scroller-sc-134qq0d-1 euYWMJ"
      >
        <div
          className="FadedScroll__Content-sc-134qq0d-2 hzHbxu"
        >
          <div
            className="FadedScroll__IntersectionTop-sc-134qq0d-4 crnks"
          />
          <div
            className="Box__StyledDiv-sc-1bfv3i9-0 ecSuzB"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
          </div>
          <div
            className="FadedScroll__IntersectionBottom-sc-134qq0d-3 bLKvVr"
          />
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs Integration: with Typography and extra space inside 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE CardWithTitle__StyledCard-sc-1ny6tjx-1 hmmprL CardWithTabs__CustomCardWithTitle-eom33o-1 fMiyle"
>
  <header
    className="CardWithTitle__StyledHeader-sc-1ny6tjx-0 gnUsaT"
  >
    <h2
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD CardWithTabs__StyledTabs-eom33o-0 jGvfzD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            <span
              style={
                Object {
                  "color": "red",
                }
              }
            >
              Custom title component
            </span>
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-0"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-0"
    role="tabpanel"
  >
    <div
      className="Box__StyledDiv-sc-1bfv3i9-0 irzwcp"
    >
      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam dictum nulla tincidunt
interdum ornare. Duis blandit nibh nec dui varius lobortis. Sed viverra, metus quis
vulputate accumsan, eros lacus semper nisl, in commodo risus lacus ut libero. Aliquam augue
quam, sollicitudin quis lectus quis, viverra gravida nibh. Quisque vel mi non tortor
sollicitudin sodales id eget odio. Sed mollis eleifend leo, et sagittis mi. Curabitur
cursus, elit ut porta vehicula, elit ipsum sagittis erat, in dapibus sapien ipsum ut purus.
Aliquam sit amet egestas lacus. Aenean leo augue, malesuada id nibh ac, malesuada fermentum
tortor. Vivamus dolor ante, fringilla vel consequat in, hendrerit vel metus. Quisque eget
ornare turpis. Suspendisse a lectus tortor. Sed ultrices lorem nibh, ultrices pulvinar eros
dictum sit amet. Quisque et ipsum in tellus pharetra tempus. Morbi non nunc rhoncus nisi
pellentesque sagittis. Ut eu sem et ante facilisis consequat. Aliquam lorem ligula, laoreet
quis maximus vel, rhoncus ut odio. Mauris interdum aliquet dolor ac efficitur. Maecenas
egestas porttitor tempor. In at dui tellus. Praesent at lorem metus. Quisque ultricies,
nulla sed pulvinar volutpat, libero enim auctor erat, nec consectetur purus lacus sed orci.
In eleifend a risus at pulvinar. Donec ultricies justo et ligula venenatis, sed ultrices
nunc dignissim.
    </div>
  </section>
</div>
`;

exports[`Storyshots Organisms | CardWithTabs with initialActiveTabIndex 1`] = `
<div
  className="Card__StyledCard-sc-1e5czjc-0 fCiISE CardWithTitle__StyledCard-sc-1ny6tjx-1 hmmprL CardWithTabs__CustomCardWithTitle-eom33o-1 fMiyle"
>
  <header
    className="CardWithTitle__StyledHeader-sc-1ny6tjx-0 gnUsaT"
  >
    <h2
      className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 kZoBvC"
    >
      Title for the card
    </h2>
  </header>
  <ul
    className="Tabs__StyledUl-bqti0u-1 fvoSDF Flexbox__StyledFlexbox-sc-1ob4g1e-0 ldKkQD CardWithTabs__StyledTabs-eom33o-0 jGvfzD"
    direction="row"
    role="tablist"
  >
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 hhBrGJ"
      >
        <button
          aria-selected={false}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-0"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={-1}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 fAyBAw"
            height={8}
          >
            Tab title 1
          </span>
        </button>
      </span>
    </li>
    <li
      className="Flexbox__StyledFlexbox-sc-1ob4g1e-0 ikbdiw"
      role="presentation"
    >
      <span
        className="Typography__Span-sc-10mju41-0 AEhz Typography__StyledTypography-sc-10mju41-1 jhNVIy"
      >
        <button
          aria-selected={true}
          className="NormalizedButton__Button-ey7f5x-0 Tabs__StyledButton-bqti0u-0 bBpoDR"
          id="tabs-tab-1"
          onClick={[Function]}
          onKeyDown={[Function]}
          role="tab"
          tabIndex={0}
          type="button"
        >
          <span
            className="TabTitle__StyledTitle-sc-1sa0gl6-0 dgGiju"
            height={8}
          >
            Tab title 2
          </span>
        </button>
      </span>
    </li>
  </ul>
  <div
    className="Separator__StyledSeparator-a5vdsz-0 kXyqdV"
  />
  <section
    aria-labelledby="tabs-tab-1"
    className="Tabs__Content-bqti0u-2 hYgPOB"
    hidden={false}
    id="tabs-tabpanel-1"
    role="tabpanel"
  >
    2
  </section>
</div>
`;
